# arrow-home

./: .env.template  .gitignore  CLAUDE.md  Dockerfile.backstage  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pwd.py
backend/: .dockerignore  database.py  main.py  pyproject.toml  schema.sql  seed.py
backstage/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
backstage/.next/: trace
backstage/.next/cache/: .rscinfo  .tsbuildinfo
backstage/.next/server/: server-reference-manifest.json
backstage/app/: globals.css  layout.tsx
backstage/app/(auth)/login/: login.module.css  page.tsx
backstage/app/(dashboard)/: dashboard.module.css  layout.tsx  page.module.css  page.tsx
backstage/app/(dashboard)/cases/: cases.module.css  page.tsx
backstage/app/(dashboard)/categories/: categories.module.css  page.tsx
backstage/app/(dashboard)/company/: company.module.css  page.tsx
backstage/app/(dashboard)/import/: import.module.css  page.tsx
backstage/components/: Button.module.css  Button.tsx  CategoryIcon.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  ImageUploader.module.css  ImageUploader.tsx  Modal.module.css  Modal.tsx  PageHeader.module.css  PageHeader.tsx  ProductForm.module.css  ProductForm.tsx  Sidebar.module.css  Sidebar.tsx
backstage/lib/: api.ts  query-client.ts
miniprogram/: package.json  project.config.json  project.private.config.json
miniprogram/config/: index.js
miniprogram/src/: app.config.js  app.scss
miniprogram/src/utils/: api.js  constants.js
(+35 files in other folders)
